Fix column overflow on /favorite/leaderboard
the final number (100) overflowed onto the distribution name

--- a/root/static/scss/table.scss
+++ b/root/static/scss/table.scss
@@ -42,7 +42,7 @@
     }
 
     th.position {
-        width: 10px;
+        width: 3em;
     }
 
     th.river-gauge,
